; ModuleID = '/home/carl/AnghaBench/tg/extr_main.c_sig_term_handler.c'
source_filename = "/home/carl/AnghaBench/tg/extr_main.c_sig_term_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@termination_signal_handler = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"SIGTERM/SIGINT received\0A\00", align 1
@sigterm_cnt = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sig_term_handler(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @termination_signal_handler, align 4
  %5 = call i32 @signal(i32 %3, i32 %4)
  %6 = call i64 @write(i32 1, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 25)
  %7 = icmp slt i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %9

9:                                                ; preds = %8, %1
  %10 = load i32, i32* @sigterm_cnt, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* @sigterm_cnt, align 4
  ret void
}

declare dso_local i32 @signal(i32, i32) #1

declare dso_local i64 @write(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
